--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "googleapis": "^140.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
