--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
     },
     "types": ["jest"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","jest.setup.ts", "__tests__/src/app/deals/dealRow.test.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "jest.setup.ts",
+    "__tests__/src/app/deals/dealRow.test.tsx"
+  ],
   "exclude": ["node_modules"]
 }
